--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,6 @@
 			<a href="./resume.html">Resume</a>
 			<a href="./about.html">About Me</a>
 		</nav>
-		<h1>Nicholas Tuttle</h1>
-		<p>Hosted with GitHub Pages.</p>
+		<p>Resume Page</p>
 	</body>
 </html>
