--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<nav>
-			<a href="./index.html">Home</a>
-			<a href="./education.html">Education</a>
-			<a href="./projects.html">Projects</a>
-			<a href="./resume.html">Resume</a>
-			<a href="./about.html">About Me</a>
-		</nav>
+		<p style="background-color:black;">
+			<nav>
+				<a href="./index.html">Home</a>
+				<a href="./education.html">Education</a>
+				<a href="./projects.html">Projects</a>
+				<a href="./resume.html">Resume</a>
+				<a href="./about.html">About Me</a>
+			</nav>
+		</p>	
 		<h1>Nicholas Tuttle</h1>
 		<p>Hosted with GitHub Pages.</p>
 	</body>
