--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<p style="background-color:black;">
+		<div class="top_banner">
 			<nav>
-				<a href="./index.html">Home</a>
-				<a href="./education.html">Education</a>
-				<a href="./projects.html">Projects</a>
-				<a href="./resume.html">Resume</a>
-				<a href="./about.html">About Me</a>
+				<h1>
+					<table>
+						<tr>
+							<th><a href="./index.html">Home</a></th>
+							<th><a href="./education.html">Education</a></th>
+							<th><a href="./projects.html">Projects</a></th>
+							<th><a href="./resume.html">Resume</a></th>
+							<th><a href="./about.html">About Me</a></th>
+						</tr>
+					</table>
+				</h1>
 			</nav>
-		</p>	
-		<h1>Nicholas Tuttle</h1>
-		<p>Hosted with GitHub Pages.</p>
+		</div>	
+		<h1 class="center">Home</h1>
 	</body>
 </html>
