--- a/projects.html
+++ b/projects.html
@@ -4,13 +4,21 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<nav>
-			<a href="./index.html">Home</a>
-			<a href="./education.html">Education</a>
-			<a href="./projects.html">Projects</a>
-			<a href="./resume.html">Resume</a>
-			<a href="./about.html">About Me</a>
-		</nav>
-		<p>Projects Page</p>
+		<div class="top_banner">
+			<nav>
+				<h1>
+					<table>
+						<tr>
+							<th><a href="./index.html">Home</a></th>
+							<th><a href="./education.html">Education</a></th>
+							<th><a href="./projects.html">Projects</a></th>
+							<th><a href="./resume.html">Resume</a></th>
+							<th><a href="./about.html">About Me</a></th>
+						</tr>
+					</table>
+				</h1>
+			</nav>
+		</div>
+		<h1 class="center">Projects</h1>
 	</body>
 </html>
