--- a/education.html
+++ b/education.html
@@ -19,6 +19,8 @@
 				</h1>
 			</nav>
 		</div>
-		<h1 class="center">Education</h1>
+		<h1 class="title">Education</h1>
+		<div class="body">University of Minnesota, College of Science and Engineering</div>
+		<div class="body">Class of 2019</div>
 	</body>
 </html>
