--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,9 @@
 				</h1>
 			</nav>
 		</div>
-		<h1 class="center">Projects</h1>
+		<h1 class="title">Projects</h1>
+		<div class="body">Decision Tree-Based Handwritten Digit Classifier:</div>
+		<div class="body">N-Dimensional Clustering Algorithm:</div>
+		<div class="body">Frequent Itemset and Ruleset Generator:</div>
 	</body>
 </html>
