More styling, and creating smooth scrolling on the "projects" page for the table of contents

--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="top_banner">
+		<div class="top_banner relaxed_blue">
 			<nav>
 				<h1>
 					<table>
@@ -19,8 +19,29 @@
 				</h1>
 			</nav>
 		</div>
+		<div><h1>*</h1></div>
 		<h1 class="title">Education</h1>
-		<div class="body">University of Minnesota, College of Science and Engineering</div>
-		<div class="body">Class of 2019</div>
+		<div class="body_text">University of Minnesota, College of Science and Engineering</div>
+		<div class="body_text">Class of 2019</div>
+		<div class="body_text">Bachelor of Science, Computer Engineering</div>
+		<div class="body_text">
+			<p class="indent1">Courses Taken Include:
+				<ul>
+					<li>Software Engineering</li>
+					<li>Introduction to Data Mining</li>
+					<li>Introduction to Artificial Intelligence</li>
+					<li>Programming Graphics and Games</li>
+					<li>Algorithms and Data Structures</li>
+					<li>Internet Programming</li>
+					<li>User Interface Design</li>
+					<li>Intro to Computer Security</li>
+					<li>Introduction to Operating Systems</li>
+					<li>Embedded Systems</li>
+					<li>Microcontrollers</li>
+					<li>Linear Algebra</li>
+					<li>Multivariable Calculus</li>
+				</ul>
+			</p>	
+		</div>
 	</body>
 </html>
