--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="top_banner">
+		<div class="top_banner relaxed_blue">
 			<nav>
 				<h1>
 					<table>
@@ -18,7 +18,12 @@
 					</table>
 				</h1>
 			</nav>
-		</div>	
+		</div>
+		<div><h1>*</h1></div>
 		<h1 class="title">Home</h1>
+		<div class="body_text">Hello! My name is Nicholas Tuttle. This is my website. There isn't much here yet, 
+		and a lot is still a work-in-progres, but feel free to look around as you please.
+		I will be adding things to it periodically when I have time.
+		</div>
 	</body>
 </html>
