--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="top_banner">
+		<div class="top_banner relaxed_blue">
 			<nav>
 				<h1>
 					<table>
@@ -19,6 +19,8 @@
 				</h1>
 			</nav>
 		</div>
+		<div><h1>*</h1></div>
 		<h1 class="title">Resume</h1>
+		<div class="body_text">I haven't made this section yet. Coming soon!</div>
 	</body>
 </html>
