Project's page changes

--- a/projects.html
+++ b/projects.html
@@ -29,10 +29,14 @@
 			</ul>
 		</h3>
 		<h2><ul><li><div class="body_text" id="DTBHDC" >Decision Tree-Based Handwritten Digit Classifier:</div></li></ul></h2>
-			<p class="body_text" style="height:1000px">This is where I will put information about the decision tree-based handwritten digit classifier.
+			<p class="body_text">This is where I will put information about the decision tree-based handwritten digit classifier.
 			I haven't created this section yet though. Coming soon!</p>
-		<h2><ul><li><div class="body_text" id="NDCA" style="height:1000px">N-Dimensional Clustering Algorithm:</div></li></ul></h2>
-		<h2><ul><li><div class="body_text" id="FIaRG" style="height:1000px">Frequent Itemset and Ruleset Generator:</div></li></ul></h2>
+		<h2><ul><li><div class="body_text" id="NDCA">N-Dimensional Clustering Algorithm:</div></li></ul></h2>
+			<p class="body_text">This is where I will put information about the N-dimensional clustering algorithm.
+			I haven't created this section yet though. Coming soon!</p>
+		<h2><ul><li><div class="body_text" id="FIaRG">Frequent Itemset and Ruleset Generator:</div></li></ul></h2>
+			<p class="body_text">This is where I will put information about the frequent itemset and ruleset generator.
+			I haven't created this section yet though. Coming soon!</p>
 	</body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
