--- a/resume.html
+++ b/resume.html
@@ -21,6 +21,48 @@
 		</div>
 		<div><h1>*</h1></div>
 		<h1 class="title">Resume</h1>
-		<div class="body_text">I haven't made this section yet. Coming soon!</div>
+		<h2>Summary</h2>
+		<ul>
+			<li>4 years of total experience as a software developer at Open Systems International, with 1 year of experience as a supervisor. Leads a team of 6 other individual contributors</li>
+			<li>Experienced in C, C++, and C#. Some experience with Python, GLSL, and the Vulkan Compute API</li>
+			<li>Works with customers and stakeholders to design, develop, and iterate on large-scale, real-time, distributed SCADA systems focused on availability and performance. Creates documentation for newly developed API's and configuration settings</li>
+			<li>Rebuilt major product features and functionality to improve user experience and backend performance</li>
+		</ul>
+		<h2>Experience</h2>
+		<h3>Software Engineering Supervisor</h3>
+		<h4>Open Systems International</h4>
+		<h5>June 2019 - Present</h5>
+		<ul>
+			<li>Supervises a team of 6 direct reports, and contributes individually to develop new customer-facing enhancements and maintain legacy codebases</li>
+			<li>Collaborates with direct reports, system architects, other teams, and quality assurance members to ship large-scale, production quality system software</li>
+			<li>Estimates and plans product enhancements, including short-term and long-term timelines</li>
+			<li>Troubleshoots system issues, and triages new defect reports</li>
+			<li>Creates documentation for new API’s, configuration settings, and features</li>
+			<li>Mentors junior team members on best practices and expectations including scrum expectations, code review practices, automated testing within CI pipelines, and project development workflows</li>
+		</ul>
+		<h3>Software Engineering Intern</h3>
+		<h4>Open Systems International</h4>
+		<h5>May 2018 - August 2018</h5>
+		<ul>
+			<li>Developed, tested, and released a new feature in a large SCADA system</li>
+			<li>Collaborated with senior engineers to clarify design requirements and review code changes</li>
+			<li>Verified functionality with QA individuals</li>
+			<li>Presented final project to executives</li>
+		</ul>
+		<h2>Education</h2>
+		<h3>University of Minnesota, Twin Cities</h3>
+		<h4>B.S, Computer Engineering</h4>
+		<h2>Skills</h2>
+		<ul>
+			<li>C++</li>
+			<li>C#</li>
+			<li>C (Programming Language)</li>
+			<li>GitHub</li>
+			<li>Jira</li>
+			<li>Jenkins</li>
+			<li>Unit Testing</li>
+			<li>Agile Methodologies</li>
+			<li>Debugging</li>
+		</ul>
 	</body>
 </html>
