--- a/resume.html
+++ b/resume.html
@@ -4,22 +4,31 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="top_banner relaxed_blue">
+		<div style="background-color: var(--blue-background);">
 			<nav>
 				<h1>
 					<table>
 						<tr>
-							<th><a href="./index.html">Home</a></th>
-							<th><a href="./education.html">Education</a></th>
-							<th><a href="./projects.html">Projects</a></th>
-							<th><a href="./resume.html">Resume</a></th>
-							<th><a href="./about.html">About Me</a></th>
+							<td>
+								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./index.html';">
+									Home
+								</button>
+							</td>
+							<td>
+								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./resume.html';">
+									Resume
+								</button>
+							</td>
+							<td>
+								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./education.html';">
+									Education
+								</button>
+							</td>
 						</tr>
 					</table>
 				</h1>
 			</nav>
 		</div>
-		<div><h1>*</h1></div>
 		<h1 class="title">Resume</h1>
 		<h2>Summary</h2>
 		<ul>
@@ -33,7 +42,7 @@
 		<h4>Open Systems International</h4>
 		<h5>June 2019 - Present</h5>
 		<ul>
-			<li>Supervises a team of 6 direct reports, and contributes individually to develop new customer-facing enhancements and maintain legacy codebases</li>
+			<li>Supervises a team of 7 direct reports, and contributes individually to develop new customer-facing enhancements and maintain legacy codebases</li>
 			<li>Collaborates with direct reports, system architects, other teams, and quality assurance members to ship large-scale, production quality system software</li>
 			<li>Estimates and plans product enhancements, including short-term and long-term timelines</li>
 			<li>Troubleshoots system issues, and triages new defect reports</li>
