--- a/index.html
+++ b/index.html
@@ -4,25 +4,34 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="top_banner relaxed_blue">
+		<div style="background-color: var(--blue-background);">
 			<nav>
 				<h1>
 					<table>
 						<tr>
-							<th><a href="./index.html">Home</a></th>
-							<th><a href="./education.html">Education</a></th>
-							<th><a href="./projects.html">Projects</a></th>
-							<th><a href="./resume.html">Resume</a></th>
-							<th><a href="./about.html">About Me</a></th>
+							<td>
+								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./index.html';">
+									Home
+								</button>
+							</td>
+							<td>
+								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./resume.html';">
+									Resume
+								</button>
+							</td>
+							<td>
+								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./education.html';">
+									Education
+								</button>
+							</td>
 						</tr>
 					</table>
 				</h1>
 			</nav>
 		</div>
-		<div><h1>*</h1></div>
 		<h1 class="title">Home</h1>
 		<div class="body_text">Hello! My name is Nicholas Tuttle. This is my website. There isn't much here yet, 
-		and a lot is still a work-in-progres, but feel free to look around as you please.
+		and a lot is still a work-in-progress, but feel free to look around as you please.
 		I will be adding things to it periodically when I have time.
 		</div>
 	</body>
