Adding more info and doing format cleanup

--- a/education.html
+++ b/education.html
@@ -2,25 +2,26 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>N Tuttle - Education</title>
 	</head>
 	<body>
-		<div style="background-color: var(--blue-background);">
+		<div class="header">
 			<nav>
 				<h1>
 					<table>
 						<tr>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./index.html';">
+								<button class="blue-curved" onclick="location.href='./index.html';">
 									Home
 								</button>
 							</td>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./resume.html';">
+								<button class="blue-curved" onclick="location.href='./resume.html';">
 									Resume
 								</button>
 							</td>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./education.html';">
+								<button class="blue-curved" onclick="location.href='./education.html';">
 									Education
 								</button>
 							</td>
@@ -29,28 +30,25 @@
 				</h1>
 			</nav>
 		</div>
-		<h1 class="title">Education</h1>
-		<div class="body_text">University of Minnesota, College of Science and Engineering</div>
-		<div class="body_text">Class of 2019</div>
-		<div class="body_text">Bachelor of Science, Computer Engineering</div>
-		<div class="body_text">
-			<p class="indent1">Courses Taken Include:
-				<ul>
-					<li>Software Engineering</li>
-					<li>Introduction to Data Mining</li>
-					<li>Introduction to Artificial Intelligence</li>
-					<li>Programming Graphics and Games</li>
-					<li>Algorithms and Data Structures</li>
-					<li>Internet Programming</li>
-					<li>User Interface Design</li>
-					<li>Intro to Computer Security</li>
-					<li>Introduction to Operating Systems</li>
-					<li>Embedded Systems</li>
-					<li>Microcontrollers</li>
-					<li>Linear Algebra</li>
-					<li>Multivariable Calculus</li>
-				</ul>
-			</p>	
+		<div class="body-text">University of Minnesota Twin Cities, College of Science and Engineering</div>
+		<div class="body-text">Class of 2019</div>
+		<div class="body-text">Bachelor of Science, Computer Engineering</div>
+		<div class="body-text">Courses Taken Include:
+			<ul>
+				<li>Software Engineering</li>
+				<li>Introduction to Data Mining</li>
+				<li>Introduction to Artificial Intelligence</li>
+				<li>Programming Graphics and Games</li>
+				<li>Algorithms and Data Structures</li>
+				<li>Internet Programming</li>
+				<li>User Interface Design</li>
+				<li>Intro to Computer Security</li>
+				<li>Introduction to Operating Systems</li>
+				<li>Embedded Systems</li>
+				<li>Microcontrollers</li>
+				<li>Linear Algebra</li>
+				<li>Multivariable Calculus</li>
+			</ul>
 		</div>
 	</body>
 </html>
