--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>N Tuttle - Home</title>
 	</head>
 	<body>
-		<div style="background-color: var(--blue-background);">
+		<div class="header">
 			<nav>
 				<h1>
 					<table>
 						<tr>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./index.html';">
+								<button class="blue-curved" onclick="location.href='./index.html';">
 									Home
 								</button>
 							</td>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./resume.html';">
+								<button class="blue-curved" onclick="location.href='./resume.html';">
 									Resume
 								</button>
 							</td>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./education.html';">
+								<button class="blue-curved" onclick="location.href='./education.html';">
 									Education
 								</button>
 							</td>
@@ -29,10 +30,37 @@
 				</h1>
 			</nav>
 		</div>
-		<h1 class="title">Home</h1>
-		<div class="body_text">Hello! My name is Nicholas Tuttle. This is my website. There isn't much here yet, 
-		and a lot is still a work-in-progress, but feel free to look around as you please.
-		I will be adding things to it periodically when I have time.
+		<div class="body-text">
+			<p>
+				Hello! My name is Nicholas Tuttle.
+			</p>
+			<hr>
+			<p>
+				I am currently working as a software development supervisor at <a href="https://www.osii.com">Open Systems International Inc.</a> (OSII), a subsidiary of <a href="https://www.aspentech.com/en">AspenTech</a>.
+				I have 7 direct reports, and over the summer of 2023 we also have an intern.
+				We work within a larger SCADA (supervisory control and data aquisition) team that creates processes for monitoring and controlling critical infrastructure.
+				Our work is mainly focused on electrical grids across the world, but also includes water, gas, and other utilities.
+				Since we deploy mission-critical software we have rigorous processes for ensuring availability, stability and performance.
+				This includes automated workflows, such as unit testing, integration testing, and static code analysis. It also includes manual testing and QA. 
+				My team designs, implements, and tests new SCADA services that customers interact with on a daily basis. 
+				Other teams also interact with out services, so we maintain external interfaces that can be used to build more advanced applications.
+			</p>
+			<hr>
+			<p>
+				In my free time I enjoy learning about graphics programming, and have been familiarizing myself with the Vulkan API.
+				I also enjoy creating digital art, I have a small portfolio on my Artstation profile <a href="https://www.artstation.com/thekingtut">here</a>.
+				I especially love creating 3d renders of space, including planets, stars, and nebula.
+			</p>
+			<hr>
+			<p>
+				Here's one of my favorite renders of a science-fiction character that I created, and a space nebula as well:
+			</p>
+			<a target="_blank" rel="noopener noreferrer" href="https://cdnb.artstation.com/p/assets/images/images/027/193/593/large/nicholas-tuttle-render-14.jpg?1590851603">
+				<img class="inline" alt="Science-Fiction Character Render" src="https://cdnb.artstation.com/p/assets/images/images/027/193/593/large/nicholas-tuttle-render-14.jpg?1590851603">
+			</a>
+			<a target="_blank" rel="noopener noreferrer" href="https://cdna.artstation.com/p/assets/images/images/051/510/408/large/nicholas-tuttle-planetbackground17-02.jpg?1657487964">
+				<img class="inline" alt="Space Nebula" src="https://cdna.artstation.com/p/assets/images/images/051/510/408/large/nicholas-tuttle-planetbackground17-02.jpg?1657487964">
+			</a>
 		</div>
 	</body>
 </html>
