--- a/resume.html
+++ b/resume.html
@@ -2,25 +2,26 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>N Tuttle - Resume</title>
 	</head>
 	<body>
-		<div style="background-color: var(--blue-background);">
+		<div class="header">
 			<nav>
 				<h1>
 					<table>
 						<tr>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./index.html';">
+								<button class="blue-curved" onclick="location.href='./index.html';">
 									Home
 								</button>
 							</td>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./resume.html';">
+								<button class="blue-curved" onclick="location.href='./resume.html';">
 									Resume
 								</button>
 							</td>
 							<td>
-								<button class="button-curved blue-gradient emphasized-text" onclick="location.href='./education.html';">
+								<button class="blue-curved" onclick="location.href='./education.html';">
 									Education
 								</button>
 							</td>
@@ -29,18 +30,18 @@
 				</h1>
 			</nav>
 		</div>
-		<h1 class="title">Resume</h1>
-		<h2>Summary</h2>
+		<h2 class="indent">Summary</h2>
 		<ul>
 			<li>4 years of total experience as a software developer at Open Systems International, with 1 year of experience as a supervisor. Leads a team of 6 other individual contributors</li>
 			<li>Experienced in C, C++, and C#. Some experience with Python, GLSL, and the Vulkan Compute API</li>
 			<li>Works with customers and stakeholders to design, develop, and iterate on large-scale, real-time, distributed SCADA systems focused on availability and performance. Creates documentation for newly developed API's and configuration settings</li>
-			<li>Rebuilt major product features and functionality to improve user experience and backend performance</li>
+			<li>Built major product features and functionality to improve user experience and backend performance</li>
 		</ul>
-		<h2>Experience</h2>
-		<h3>Software Engineering Supervisor</h3>
-		<h4>Open Systems International</h4>
-		<h5>June 2019 - Present</h5>
+		<hr>
+		<h2 class="indent">Experience</h2>
+		<h3 class="indent">Software Engineering Supervisor</h3>
+		<h4 class="indent">Open Systems International</h4>
+		<h5 class="indent">June 2019 - Present</h5>
 		<ul>
 			<li>Supervises a team of 7 direct reports, and contributes individually to develop new customer-facing enhancements and maintain legacy codebases</li>
 			<li>Collaborates with direct reports, system architects, other teams, and quality assurance members to ship large-scale, production quality system software</li>
@@ -49,19 +50,20 @@
 			<li>Creates documentation for new API’s, configuration settings, and features</li>
 			<li>Mentors junior team members on best practices and expectations including scrum expectations, code review practices, automated testing within CI pipelines, and project development workflows</li>
 		</ul>
-		<h3>Software Engineering Intern</h3>
-		<h4>Open Systems International</h4>
-		<h5>May 2018 - August 2018</h5>
+		<h3 class="indent">Software Engineering Intern</h3>
+		<h4 class="indent">Open Systems International</h4>
+		<h5 class="indent">May 2018 - August 2018</h5>
 		<ul>
 			<li>Developed, tested, and released a new feature in a large SCADA system</li>
 			<li>Collaborated with senior engineers to clarify design requirements and review code changes</li>
 			<li>Verified functionality with QA individuals</li>
 			<li>Presented final project to executives</li>
 		</ul>
-		<h2>Education</h2>
-		<h3>University of Minnesota, Twin Cities</h3>
-		<h4>B.S, Computer Engineering</h4>
-		<h2>Skills</h2>
+		<hr>
+		<h2 class="indent">Education</h2>
+		<h3 class="indent">University of Minnesota, Twin Cities</h3>
+		<h4 class="indent">B.S, Computer Engineering</h4>
+		<h2 class="indent">Skills</h2>
 		<ul>
 			<li>C++</li>
 			<li>C#</li>
@@ -72,6 +74,10 @@
 			<li>Unit Testing</li>
 			<li>Agile Methodologies</li>
 			<li>Debugging</li>
+			<li>Code Review</li>
+			<li>Mentoring New Hires</li>
+			<li>Vulkan Compute Pipelines</li>
+			<li>Software Service Design and Implementation</li>
 		</ul>
 	</body>
 </html>
